--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </div>
 
           <div class="pjt_st">
-            Infotatinment UI/UX, Mass Production Design, FGI Interview, Preference Survey
+            Advanced Infotatinment UI/UX, Dark Theme Original Creator
           </div>
           <div class="pjt_date">
             2018.03 - 2018.12
