--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <script src="./js/script_ozy.js"></script>
-  <script src="./day_07.js"></script>
+  <script src="script_ozy.js"></script>
+  <script src="day_07.js"></script>
 
 
 
