--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="script_ozy.js"></script>
   <script src="day_07.js"></script>
+  <script src="web_sub_2.js"></script>
 
 
 
