--- a/ozzy_web_sub_detail_08.html
+++ b/ozzy_web_sub_detail_08.html
@@ -41,7 +41,7 @@
         <div class="item_title">Main official website
           <br>Renewal project</div>
       </div>
-      <img src="./day_07_img/pjt08_img.png" class="wapl_img">
+      <img src="./day_07_img/pjt08.png" class="wapl_img">
 
     </div>
     
