--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 
 <body>
-  <div class="frame"> 여기에 active 철자가 들어가서 에러가 난것임 pjt 뒤에 left 붙이는 것처럼 코드가 들어가서 중복 에러난것임
+   <div class="frame"> <!--여기에 active 철자가 들어가서 에러가 난것임 pjt 뒤에 left 붙이는 것처럼 코드가 들어가서 중복 에러난것임 -->
     <div class="btn_close">
       <img src="./day_07_img/ic_close.png" class="item_info_close">
     </div>
